<resources>
    <string name="app_name">Spotify Streamer</string>

    <string name="title_activity_tracks">Top 10 Tracks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_player">Player</string>

    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>

    <string name="artists_not_found">Please refine your search</string>
    <string name="tracks_not_found">No spotifyTracks found</string>
    <string name="failed_playback">Failed to playback spotifyTrack preview</string>

    <string name="loading">Loading...</string>
    <string name="share">Share</string>

    <string name="pref_country_label">Country</string>
    <string name="pref_country_key">country</string>
    <string name="pref_country_default">US</string>

    <string name="pref_notification_label">Media Notification</string>
    <string name="pref_notification_key" translatable="false">notifications</string>
    <string name="pref_notification_true" >Enabled</string>
    <string name="pref_notification_false" >Not Enabled</string>
    <string name="pref_notification_default" translatable="false">true</string>
</resources>
